[package]
name = "rp-bmp280"
version = "0.1.0"
edition = "2021"

[dependencies]
bmp280-ehal = "0.0.6"
cortex-m = { version = "0.7.7", features = ["critical-section", "inline-asm"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
itoa = { version = "1.0.11", features = ["no-panic"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.8.0", features = ["critical-section"] }
ssd1306 = { version = "0.9.0", features = ["async"] }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
